[package]
name = "pre-sale-contact"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pre_sale_contact"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-panic = []  # Add this line to enable custom-panic feature
anchor-debug = [] 

[dependencies]
anchor-lang = {version="0.30.1", features=["init-if-needed"]}
anchor-spl = "0.30.1"
spl-token = {version = "~3.2.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]}

